name:                ChinesePodAPI
version:             0.1.0.0
synopsis:            Bindings to the ChinesePod API
-- description:
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@edsko.net
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  HSK/2012/HSK1.txt
                     HSK/2012/HSK2.txt
                     HSK/2012/HSK3.txt
                     HSK/2012/HSK4.txt
                     HSK/2012/HSK5.txt
                     HSK/2012/HSK6.txt
cabal-version:       >=1.10

library
  exposed-modules:     Servant.ChinesePod.API
                       Servant.ChinesePod.Analysis
                       Servant.ChinesePod.Client
                       Servant.ChinesePod.HSK.Aux
                       Servant.ChinesePod.HSK.HSK2012
                       Servant.ChinesePod.Vocab
  other-modules:       Servant.ChinesePod.Util.Orphans.PrettyVal
  build-depends:         base >=4.8 && <4.9
                       , aeson
                       , aeson-pretty
                       , binary
                       , bytestring
                       , containers
                       , cryptohash
                       , either
                       , network-uri
                       , pretty-show
                       , servant
                       , servant-client
                       , template-haskell
                       , text
                       , transformers
                       , unordered-containers
                       , utf8-string
                       , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DataKinds
                       DeriveDataTypeable
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       RecordWildCards
                       ScopedTypeVariables
                       TypeOperators
  other-extensions:    OverloadedStrings
                       TemplateHaskell
  ghc-options:         -Wall

executable cpod-query
  main-is:             Main.hs
  other-modules:       Options
  build-depends:         base
                       , ChinesePodAPI
                       , binary
                       , containers
                       , directory
                       , network-uri
                       , optparse-applicative
                       , pretty-show
                       , servant
                       , text
  hs-source-dirs:      src-main
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                       ScopedTypeVariables
                       MultiParamTypeClasses
  ghc-options:         -Wall
